# ANTLR-cmake-starter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
tools/antlr/: download.sh
